force-app/main/default/objects/OTA_Booking_Flow__c/OTA_Booking_Flow__c.object-meta.xml
<CustomObject>
    <description>OTA Booking Experience and Flow</description>
    <label>OTA Booking Flow</label>
    <nameField>
        <displayFormat>OTA-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTA Booking Flows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>