force-app/main/default/objects/OTA_Booking_Flow__c/fields/Additional_lnformation__c.field-meta.xml
<CustomField>
    <fullName>Additional_lnformation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional lnformation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>