force-app/main/default/objects/OTA_Booking_Flow__c/fields/Amount_Charged__c.field-meta.xml
<CustomField>
    <fullName>Amount_Charged__c</fullName>
    <inlineHelpText>Total Amound deducted from the card</inlineHelpText>
    <label>Amount Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>