force-app/main/default/objects/OTA_Booking_Flow__c/fields/Baggage__c.field-meta.xml
<CustomField>
    <fullName>Baggage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the baggage limit reference accurate with what is provided under the fare rules?</description>
    <inlineHelpText>Was the baggage limit reference accurate with what is provided under the fare rules?</inlineHelpText>
    <label>Baggage</label>
    <type>Checkbox</type>
</CustomField>