force-app/main/default/objects/OTA_Booking_Flow__c/fields/Booking_Agent_Account__c.field-meta.xml
<CustomField>
    <fullName>Booking_Agent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Agent Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agency Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OTA Booking Flows (Booking Agent Account)</relationshipLabel>
    <relationshipName>Booking_Agent_Link</relationshipName>
    <type>Lookup</type>
</CustomField>