force-app/main/default/objects/OTA_Booking_Flow__c/fields/Booking_PCC__c.field-meta.xml
<CustomField>
    <fullName>Booking_PCC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking PCC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>