force-app/main/default/objects/OTA_Booking_Flow__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>