force-app/main/default/objects/OTA_Booking_Flow__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the brand correctly represented, new logo etc</description>
    <inlineHelpText>Was the brand correctly represented, new logo etc</inlineHelpText>
    <label>Brand</label>
    <type>Checkbox</type>
</CustomField>