force-app/main/default/objects/OTA_Booking_Flow__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Booking Class</inlineHelpText>
    <label>Fare Basis</label>
    <length>15</length>
    <type>Text</type>
</CustomField>