force-app/main/default/objects/OTA_Booking_Flow__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>