force-app/main/default/objects/OTA_Booking_Flow__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was your meal request noted on your itinerary and visible when your logged in to Manage your Booking?</description>
    <inlineHelpText>Was your meal request noted on your itinerary and visible when your logged in to Manage your Booking?</inlineHelpText>
    <label>Meal</label>
    <type>Checkbox</type>
</CustomField>