force-app/main/default/objects/OTA_Booking_Flow__c/fields/O_D_Pair__c.field-meta.xml
<CustomField>
    <fullName>O_D_Pair__c</fullName>
    <formula>Origin__r.Name  &amp; &quot;-&quot;  &amp;  Destination__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>O&amp;D Pair</label>
    <type>Text</type>
</CustomField>