force-app/main/default/objects/OTA_Booking_Flow__c/fields/OTA_Web_address__c.field-meta.xml
<CustomField>
    <fullName>OTA_Web_address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OTA Web address</label>
    <type>Url</type>
</CustomField>