force-app/main/default/objects/OTA_Booking_Flow__c/fields/QF_Conditions_of_Carriage__c.field-meta.xml
<CustomField>
    <fullName>QF_Conditions_of_Carriage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Were the conditions of carriage available for review</description>
    <inlineHelpText>Were the conditions of carriage available for review?</inlineHelpText>
    <label>QF Conditions of Carriage</label>
    <type>Checkbox</type>
</CustomField>