force-app/main/default/objects/OTA_Booking_Flow__c/fields/QF_Fare_Rules__c.field-meta.xml
<CustomField>
    <fullName>QF_Fare_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Were the Qantas Fare rules accurately displayed?</description>
    <inlineHelpText>Were the Qantas Fare rules accurately displayed?</inlineHelpText>
    <label>QF Fare Rules</label>
    <type>Checkbox</type>
</CustomField>