force-app/main/default/objects/OTA_Booking_Flow__c/fields/Seat_Selection__c.field-meta.xml
<CustomField>
    <fullName>Seat_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was your requested seat assignment noted on your itinerary and visible when you logged into manage Your Booking?</description>
    <inlineHelpText>Was your requested seat assignment noted on your itinerary and visible when you logged into manage Your Booking?</inlineHelpText>
    <label>Seat Selection</label>
    <type>Checkbox</type>
</CustomField>