force-app/main/default/objects/OTA_Booking_Flow__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ticket Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>