force-app/main/default/objects/OTA_Booking_Flow__c/fields/Ticketing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_Agent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>IATA number of the ticketing agent</inlineHelpText>
    <label>Ticketing Agent</label>
    <length>8</length>
    <type>Text</type>
</CustomField>