force-app/main/default/objects/OTA_Booking_Flow__c/fields/Ticketing_Agent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_Agent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticketing Agent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OTA Booking Flows (Ticketing Agent Account)</relationshipLabel>
    <relationshipName>Ticketing_Agent_Link</relationshipName>
    <type>Lookup</type>
</CustomField>