force-app/main/default/objects/OTA_Booking_Flow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OTA_Business_Name__c</columns>
    <columns>Qtr__c</columns>
    <columns>Overall_Customer_Experience__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>